# mlp

./: .gitignore  Pipfile  README.md  adaptor-routing-method.md  augment.py  augument.py  gpt.py  microgpt.py  mlp.py  pyproject.toml  test.py
data/: kangaekata_raw.txt
data/old/: independence.txt  independence2.txt  kangaekata_neo4j.txt
src/config/: settings.py
src/core/: llm_client.py  vector_db.py
src/llm/: gemini.py  kawarasaki.py
src/utils/: processors.py
test/: 20260312_mixed_replay.md  20260312_report_scaling_4d-m8.md  20260312_scaling_repro_08.txt  20260312_scaling_survey.md  20260312_scaling_survey_4d.md  20260312_scaling_survey_4d_m8.md  20260313_report_step7_m8_4d.md  20260314_report_infer_speed.md  20260315_report_4b_8ep.md  20260315_report_4b_8ep_8bit.md  20260315_report_4b_hook_test.md  20260315_report_vram.md  20260319_report_4b_5ep_fp32_kangaekata.md  infer_hidden_test.py  infer_speed_test.py  lambda_survey.py  lambda_survey_202603142135.txt  lambda_survey_202603150716.txt  lambda_survey_202603151232.txt  lambda_survey_202603190044.txt  report-format.md  report-format_model.md  report-format_scaling.md  test.py  train_vram_measure.py
test/old/: 20260302_lambda_survey_0957.txt  20260302_lambda_survey_1014.txt  20260304_lambda_survey_1642.txt  20260306_lambda_survey_0325.txt  20260306_lambda_survey_0328.txt  20260306_lambda_survey_0412.txt  20260306_lambda_survey_0413.txt  20260306_lambda_survey_0450.txt  20260306_lambda_survey_0512.txt  20260306_lambda_survey_0810.txt  20260306_lambda_survey_0944.txt  20260306_lambda_survey_0959.txt  (+66 more)
